fix gaps

--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -4,7 +4,6 @@
     border-radius: 10px;
     padding: 34px 36px 37px;
     position: relative;
-    border-radius: 10px;
 }
 
 @media screen and (max-width: 425px) {
